objects/ASI_CRM_Calculated_FOC_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Actual_Purchase__c</fullName>
        <label>Actual Purchase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Calculated_FOC__c</fullName>
        <label>Calculated FOC</label>
        <referenceTo>ASI_CRM_Calculated_FOC__c</referenceTo>
        <relationshipLabel>Calculated FOC Items</relationshipLabel>
        <relationshipName>Calculated_FOC_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExcessQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceeded Contract Entitlement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_WS__c</fullName>
        <label>FOC (WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC__c</fullName>
        <label>FOC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Calculated FOC Items (Original SKU)</relationshipLabel>
        <relationshipName>Calculated_FOC_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packing_Size__c</fullName>
        <formula>ASI_CRM_SKU__r.ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pervious_Remain_PRM__c</fullName>
        <label>Brought Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pervious_Remain_WS__c</fullName>
        <label>Brought Forward (WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remain_WS__c</fullName>
        <description>Actual Sales Remaining</description>
        <label>Remain (WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remain__c</fullName>
        <description>Actual Sales Remaining</description>
        <label>Remain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Calculated FOC Items</relationshipLabel>
        <relationshipName>Calculated_FOC_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Calculated FOC Item</label>
    <nameField>
        <displayFormat>FI{00000000}</displayFormat>
        <label>Calculated FOC Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated FOC Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Calculated_FOC_Item</fullName>
        <active>true</active>
        <label>ASI CRM MY Calculated FOC Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>